--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,13 @@
 {
   "manifest_version": 3,
-  "name": "Video Downloader (Python Backend)",
-  "version": "0.1",
-  "description": "Send video URLs to local Python server for download.",
+  "name": "Video Downloader",
+  "version": "1.0",
+  "description": "Download videos or audio via local Flask server",
   "action": {
-    "default_popup": "popup.html",
-    "default_title": "Download Video"
+    "default_popup": "popup.html"
   },
   "permissions": [
-    "activeTab"
+    "http://127.0.0.1:5000/"
   ]
 }
 
